Fix wrapping of "Dashboard" text

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
 
 .sidebar>* {
     display: grid;
-    grid-template-columns: 50px 15ch;
+    grid-template-columns: 50px max-content;
     align-items: center;
     gap: 1rem;
 }
